--- a/style.css
+++ b/style.css
@@ -22,10 +22,10 @@ body {
 
   #app, #loading, #error, #launch {
     position: absolute;
-    top: 10%;
-    left: 25%;
-    width: 50%;
-    height: 50%;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
   .screen {
     
